# SRG_Rev_Copilot

./: .pre-commit-config.yaml  .replit  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  replit.md
.github/: pyproject.toml
.github/scripts/: ai_task.py
.github/workflows/: ai_task.yml  ci.yml  collect_context.yml  nightly_etl.yml
attached_assets/: Pasted-SYSTEM-You-are-the-autonomous-Lead-Engineer-for-SRG-RM-Copilot-Build-the-full-local-scaffold-in-t-1753339529417_1753339529417.txt  Pasted-TASK-1-Fix-CI-workflow-exit-code-64-and-stabilize-GitHub-Actions-Context-CI-failed-with-exit--1753345355163_1753345355165.txt  Pasted-TASK-1-Rewrite-and-unskip-the-legacy-tests-CLI-Wheelhouse-client-Context-22-tests-are-curre-1753344789846_1753344789847.txt
data/: .gitkeep  health.json
data/raw/listing_001/: 2025-07-01.parquet
data/raw/listing_002/: 2025-07-01.parquet
data/raw/listing_003/: 2025-07-01.parquet
scripts/: health_check.py
src/srg_rm_copilot/: __init__.py  __main__.py  cli.py  config.py  etl.py  health.py  llm.py  utils.py  wheelhouse.py
tests/: __init__.py  test_cli.py  test_etl.py  test_wheelhouse.py
tests/fixtures/: wheelhouse_listings.json
